Fix too long titles breaking up on post-wide

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -192,7 +192,7 @@ span.load-more-link.inactive {
 
 .post-header h1,
 .post-header .socials-post {
-    display: inline-block;
+    display: inline;
 }
 
 .post-header h1 {
